--- a/weather/templates/weather/index.html
+++ b/weather/templates/weather/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -7,6 +8,7 @@
         <title>Weather App</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+        <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
     </head>
     <body>
@@ -19,9 +21,9 @@
         <br>
 
         <div class="container">
-            <h2> {{ data }} </h2>
+            <!-- <h2> {{ data }} </h2> -->
             <div class="row">
-                <form class="col col-md-8 offset-md-2" method="POST" action="">
+                <form class="col-12 col-md-8 offset-md-2" method="POST" action="{% url 'index' %}">
                     {% csrf_token %}
                     <div class="input-group mb-3">
                         <input type="text" class="form-control" placeholder="type city name here ...." name="city">
@@ -29,41 +31,152 @@
                       </div>
                 </form>
             </div>
+
             <div class="row">
                 <div class="col col-md-8 offset-md-2">
-                    <div class="">
-                        <img src="http://openweathermap.org/img/w/{{ data.icon }}.png" alt="Image" class="img-fluid">
+
+                    <div class="dy-card">
+                        <div>
+                            <h2> Lagos </h2>
+                            <p> NG </p>
+                        </div>
+                        <div>
+                            <figure>
+                                <img src="http://openweathermap.org/img/w/01n.png" alt="Image" class="img-fluid">
+                            </figure>
+                            <h1>
+                                29*C
+                            </h1>
+                            <p>
+                                Mostly cloudy
+                            </p>
+
+                        </div>
+                        <div>
+                            <aside>
+                                <p> Wind </p>
+                                <h4> 15km/h </h4>
+                            </aside>
+                            <aside>
+                                <p> Humdity </p>
+                                <h4> 15km/h </h4>
+                            </aside>
+                            <aside>
+                                <p> Visbility </p>
+                                <h4> 15km/h </h4>
+                            </aside>
+                            <aside>
+                                <p> pressure </p>
+                                <h4> 15km/h </h4>
+                            </aside>
+                        </div>
+
+
+
                     </div>
-                    <table class="table table-light">
-                        <tbody>
-                          <tr>
-                            <th scope="row"> City </th>
-                            <td>{{ data.city }}</td>
-
-                          </tr>
-                          <tr>
-                            <th scope="row">Country Code</th>
-                            <td>{{ data.countryCode }}</td>
-
-                          </tr>
-                          <tr>
-                            <th scope="row">Temperture</th>
-                            <td>{{ data.temperture }}</td>
-                          </tr>
-                          <tr>
-                            <th scope="row">Pressure</th>
-                            <td>{{ data.pressure }}</td>
-                          </tr>
-                          <tr>
-                            <th scope="row">Humdity</th>
-                            <td>{{ data.humdity }}</td>
-                          </tr>
-                        </tbody>
-                    </table>
-                    <hr>
-                </div> 
+                  
+                </div>
             </div>
+
+
+            {% if data.cod == 200 %}
+                <div class="row">
+                    <div class="col col-md-8 offset-md-2">
+                        <div class="">
+                            <img src="http://openweathermap.org/img/w/{{ data.icon }}.png" alt="Image" class="img-fluid">
+                        </div>
+                        <form method="POST" action="{% url 'add' %} ">
+                            {% csrf_token %}
+                            <div class="input-group mb-3">
+                                <input type="text" class="form-control" name="cityname" value="{{data.city}}" hidden>
+                            </div>
+                            <button class="btn btn-secondary" type="submit"><i class="fa-solid fa-plus"></i></button>
+                        </form>
+                        <table class="table table-light">
+                            <tbody>
+                            <tr>
+                                <th scope="row"> City </th>
+                                <td>{{ data.city }}</td>
+
+                            </tr>
+                            <tr>
+                                <th scope="row">Country Code</th>
+                                <td>{{ data.countryCode }}</td>
+
+                            </tr>
+                            <tr>
+                                <th scope="row">Temperture</th>
+                                <td>{{ data.temperture }}</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Pressure</th>
+                                <td>{{ data.pressure }}</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Humdity</th>
+                                <td>{{ data.humdity }}</td>
+                            </tr>
+                            </tbody>
+                        </table>
+                        <hr>
+                    </div> 
+                </div>
+            {% endif %}
+
+            <hr> <hr>
+
+            {% if data.message%}
+                <div class="row">
+                    <div class="col col-md-8 offset-md-2">
+                    <h1> ERROR </h1>
+                    </div> 
+                </div>
+            {% endif %}
+
+                {% for data in data2 %}
+
+
+                    <div class="row">
+                        <div class="col col-md-8 offset-md-2">
+                            <div class="">
+                                <img src="http://openweathermap.org/img/w/{{ data.icon }}.png" alt="Image" class="img-fluid">
+                            </div>
+                            <table class="table table-light">
+                                <tbody>
+                                <tr>
+                                    <th scope="row"> City </th>
+                                    <td>{{ data.city }}</td>
+
+                                </tr>
+                                <tr>
+                                    <th scope="row">Country Code</th>
+                                    <td>{{ data.countryCode }}</td>
+
+                                </tr>
+                                <tr>
+                                    <th scope="row">Temperture</th>
+                                    <td>{{ data.temperture }}</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Pressure</th>
+                                    <td>{{ data.pressure }}</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Humdity</th>
+                                    <td>{{ data.humdity }}</td>
+                                </tr>
+                                </tbody>
+                            </table>
+                            <hr>
+                        </div> 
+                    </div>
+                {% endfor %}
         </div>
+
+
+
+
+
         <footer class="footer bg-secondary fixed-bottom">
             <div style="color: white;">
                 <em>
