--- a/weather/templates/weather/betterUI.html
+++ b/weather/templates/weather/betterUI.html
@@ -8,6 +8,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
         <style>
+
             .dy-card{
                 color: #fff;
                 background-color: rgb(121, 144, 174);
@@ -16,13 +17,14 @@
                 padding: 15px 10px;
                 border-radius: 15px;
                 margin: 0%;
+                font-size: 1rem;
             }
             .dy-card *{
                 margin: 0;
             }
             .dy-card p{
                 color: #ffffffd1;
-                font-size: 1.2rem;
+                font-size: 1.2em;
             }
             .dy-card div:first-child{
                 /* font-size: 2rem; */
@@ -39,6 +41,51 @@
             .dy-card div:nth-child(3){
                 display: flex;
                 justify-content: space-between;
+            }
+
+            body{
+                background-image: url(../../../static/img/bg-weather.jpg);
+                background-position: center;
+                background-size: cover;
+                background-repeat: no-repeat;
+                background-attachment: fixed;
+            }
+            .w-card{
+                border-radius: 15px;
+                background-color: #12121240 !important;
+
+                font-size: 1.5rem;
+                box-sizing: border-box;
+                padding: 3% 1%;
+            }
+
+            .w-card *{
+                margin: 0%;
+            }
+            .w-card > *{
+                margin-top: 10px;
+            }
+            .w-card p{
+                color: #ffffffd1;
+                font-size: 0.7em;
+                }
+                .w-card h3{
+                    font-size: 00.8em;
+                }
+                .w-card h1{
+                    font-size: 3em;
+                }
+                .w-card h5{
+                    font-size: 0.9em;
+                }
+                .w-flex{
+                    display: flex;
+                    gap: 10px;
+                }
+            @media screen and (max-width: 575.98px) {
+                .w-card{
+                    font-size: 1rem;
+                }
             }
 
         </style>
@@ -64,7 +111,7 @@
                       </div>
                 </form>
             </div>
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col col-md-8 offset-md-2">
 
                     <div class="dy-card">
@@ -108,7 +155,104 @@
                     </div>
                   
                 </div>
+            </div> -->
+
+            <div class="row">
+                <div class="col-12 col-md-8 offset-md-2">
+                    <div class="row bg-primary  w-card" style="color: #fff;">
+                        <div class="col-12">
+                            <h3> Lagos </h3>
+                            <p> NG </p>
+                        </div>
+                        <div class="col-12 w-flex">
+                            <div>
+                                img
+                            </div>
+                            <div>
+                                <h1>
+                                    29*C
+                                </h1>
+                            </div>
+                            <div>
+                                <h3>
+                                    Mostly cloudy
+                                </h3>
+                                <p>
+                                    Feels Like 20*C
+                                </p>
+                            </div>
+                        </div>
+                       
+                        <div class="col-3">
+                            <p> Wind </p>
+                            <h5> 15km/h </h5>
+                        </div>
+                        <div class="col-3">
+                            <p> Humdity </p>
+                            <h5> 15km/h </h5>
+                        </div>
+                        <div class="col-3">
+                            <p> Visbility </p>
+                            <h5> 15km/h </h5>
+                        </div>
+                        <div class="col-3">
+                            <p> pressure </p>
+                            <h5> 15km/h </h5>
+                        </div>
+
+                    </div>
+                </div>
             </div>
+
+            <!-- <div class="card">
+                <div class="card-header">
+                  Featured
+                </div>
+                <div class="card-body">
+                    <div class="row bg-primary  w-card" style="color: #fff;">
+                        <div class="col-12">
+                            <h2> Lagos </h2>
+                            <p> NG </p>
+                        </div>
+                        <div class="col-3">
+                            img
+                        </div>
+                        <div class="col-3">
+                            <h1>
+                                29*C
+                            </h1>
+                        </div>
+                        <div class="col-6">
+                            <p>
+                                Mostly cloudy
+                            </p>
+                            <p>
+                                Feels Like 20*C
+                            </p>
+                        </div>
+                        <div class="col-3">
+                            <p class="card-text"> Wind </p>
+                            <p class="card-text"> 15km/h </>
+                        </div>
+                        <div class="col-3">
+                            <p> Humdity </p>
+                            <h5> 15km/h </h5>
+                        </div>
+                        <div class="col-3">
+                            <p> Visbility </p>
+                            <h5> 15km/h </h5>
+                        </div>
+                        <div class="col-3">
+                            <p> pressure </p>
+                            <h5> 15km/h </h5>
+                        </div>
+
+                    </div>
+                  <h5 class="card-title">Special title treatment</h5>
+                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div> -->
 
 
            
