--- a/weather/templates/weather/index.html
+++ b/weather/templates/weather/index.html
@@ -14,7 +14,10 @@
     <body>
         <nav class="navbar navbar-dark bg-secondary fixed-top">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Weather Today</a>
+                <!-- <img src="{% static 'img/logo.png' %}" class="img-thumbnail" alt="..."> -->
+              <a class="navbar-brand" href="{% url 'index' %}">
+                  <h1> Weather Today </h1>
+              </a>
             </div>
         </nav>
         <br>
@@ -28,191 +31,176 @@
                 <form class="col-12 col-md-8 offset-md-2" method="POST" action="{% url 'index' %}">
                     {% csrf_token %}
                     <div class="input-group mb-3">
-                        <input type="text" class="form-control" placeholder="type city name here ...." name="city">
+                        <input type="text" class="form-control" placeholder="Type city name here ...." name="city">
                         <button class="btn btn-outline-secondary" type="submit" id="button-addon2"><i class="fa-solid fa-magnifying-glass"></i></button>
                       </div>
                 </form>
             </div>
+            {% if messages %}
+                {% for message in messages %}
+                <div class="alert {{message.tags}} alert-dismissible fade show" role="alert">
+                    {{ message }}
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                  </div>
+                {% endfor %}
+            {% endif %}
 
-            <!-- <div class="row">
-                <div class="col-12 col-md-8 offset-md-2">
-                    <div class="row bg-primary  w-card" style="color: #fff;">
-                        <div class="col-12">
-                            <h3> Lagos </h3>
-                            <p> NG </p>
-                        </div>
-                        <div class="col-12 w-flex">
-                            <div class="w-img">
-                                <img src="http://openweathermap.org/img/w/01n.png" alt="Image" class="img-fluid">
-                            </div>
-                            <div>
-                                <h1>
-                                    29*C
-                                </h1>
-                            </div>
-                            <div>
-                                <h3>
-                                    Mostly cloudy
-                                </h3>
-                                <p>
-                                    Feels Like 20*C
-                                </p>
-                            </div>
-                        </div>
-                        <div class="col-3">
-                            <p> Wind </p>
-                            <h5> 15km/h </h5>
-                        </div>
-                        <div class="col-3">
-                            <p> Humdity </p>
-                            <h5> 15km/h </h5>
-                        </div>
-                        <div class="col-3">
-                            <p> Visbility </p>
-                            <h5> 15km/h </h5>
-                        </div>
-                        <div class="col-3">
-                            <p> pressure </p>
-                            <h5> 15km/h </h5>
-                        </div>
 
-                    </div>
-                </div>
-            </div> -->
+
 
 
             {% if data.cod == 200 %}
                 
                         
-                        <div class="row">
-                            <div class="col-12 col-md-8 offset-md-2">
-                                <div class="row bg-primary  w-card" style="color: #fff;">
-                                    <div class="col-10">
-                                        <h3> {{ data.city }} </h3>
-                                        <p> {{ data.countryCode }} </p>
-                                    </div>
-                                    <div class="col-2">
-                                        <figure>
-                                            <form method="POST" action="{% url 'add' %} ">
-                                                {% csrf_token %}
-                                                <div class="input-group mb-3">
-                                                    <input type="text" class="form-control" name="cityname" value="{{data.city}}" hidden>
-                                                </div>
-                                                <button class="btn btn-secondary" type="submit"><i class="fa-solid fa-plus"></i></button>
-                                            </form>
-                                        </figure>
-                                    </div>
-                                    <div class="col-12 w-flex">
-                                        <div class="w-img">
-                                            <img src="http://openweathermap.org/img/w/{{ data.icon }}.png" alt="Image" class="img-fluid">
+                <div class="row">
+                    <div class="col-12 col-md-8 offset-md-2">
+                        <div class="row bg-primary  w-card" style="color: #fff;">
+                            <div class="col-9">
+                                <h3> {{ data.city }} </h3>
+                                <p> {{ data.countryCode }} </p>
+                            </div>
+                            <div class="col-3">
+                                <figure>
+                                    <form method="POST" action="{% url 'add' %} ">
+                                        {% csrf_token %}
+                                        <div class="input-group mb-3">
+                                            <input type="text" class="form-control" name="cityname" value="{{data.city}}" hidden>
                                         </div>
-                                        <div>
-                                            <h1>
-                                                {{ data.temperture }}
-                                            </h1>
-                                        </div>
-                                        <div>
-                                            <h3>
-                                                {{ data.cloudsDescription }}
-                                            </h3>
-                                            <p>
-                                                Feels Like {{ data.feelsLike }}
-                                            </p>
-                                        </div>
-                                    </div>
-                                    <div class="col-3">
-                                        <p> Wind </p>
-                                        <h5> {{ data.wind }} </h5>
-                                    </div>
-                                    <div class="col-3">
-                                        <p> Humdity </p>
-                                        <h5>{{ data.humdity }}%</h5>
-                                    </div>
-                                    <div class="col-3">
-                                        <p> Visbility </p>
-                                        <h5> {{ data.visibility }} </h5>
-                                    </div>
-                                    <div class="col-3">
-                                        <p> pressure </p>
-                                        <h5>{{ data.pressure }} mb</h5>
-                                    </div>
-            
+                                        <button class="btn btn-secondary" type="submit"><i class="fa-solid fa-plus"></i></button>
+                                    </form>
+                                </figure>
+                            </div>
+                            <div class="col-12 w-flex">
+                                <div class="w-img">
+                                    <img src="http://openweathermap.org/img/w/{{ data.icon }}.png" alt="Image" class="img-fluid">
+                                </div>
+                                <div>
+                                    <h1>
+                                        {{ data.temperture }}
+                                    </h1>
+                                </div>
+                                <div>
+                                    <h3>
+                                        {{ data.cloudsDescription }}
+                                    </h3>
+                                    <p>
+                                        Feels Like {{ data.feelsLike }}
+                                    </p>
                                 </div>
                             </div>
+                            <div class="col-3">
+                                <p> Wind </p>
+                                <h5> {{ data.wind }} </h5>
+                            </div>
+                            <div class="col-3">
+                                <p> Humdity </p>
+                                <h5>{{ data.humdity }}</h5>
+                            </div>
+                            <div class="col-3">
+                                <p> Visbility </p>
+                                <h5> {{ data.visibility }} </h5>
+                            </div>
+                            <div class="col-3">
+                                <p> pressure </p>
+                                <h5>{{ data.pressure }}</h5>
+                            </div>
+    
                         </div>
-                        <hr>
+                    </div>
+                </div>
             {% endif %}
-
+            
+            {% if data.message%}
+                <div class="row">
+                    <div class="col col-md-8 offset-md-2">
+                     
+                    </div> 
+                </div>
+            {% endif %}
             <hr>
 
-            <h1>
+            <h1 class="text-center text-light">
                 Saved Cities
             </h1>
             
             <hr>
-
-            {% if data.message%}
-                <div class="row">
-                    <div class="col col-md-8 offset-md-2">
-                    <h1> ERROR </h1>
-                    </div> 
+            <div class="row">
+                <div class="col-12 col-md-8 offset-md-2">
+                    <h5 class="text-end text-light">
+                        {{ savedItems }} / 5
+                    </h5>
                 </div>
-            {% endif %}
+            </div>
 
-                {% for data in data2 %}
+            {% if data2 == 'empty' %}
+                <div class="row" style="height: 50vh;">
+                    <span class="align-middle">
+                    </span>
+                    <div class="col-12 col-md-8 offset-md-2">
+                        <h1 class="text-center text-muted">
+                            No City saved
+                        </h1>
+                    </div>
+                </div>
 
-                    <div class="row">
-                        <div class="col-12 col-md-8 offset-md-2">
-                            <div class="row bg-primary  w-card" style="color: #fff;">
-                                <div class="col-10">
-                                    <h3> {{ data.city }} </h3>
-                                    <p> {{ data.countryCode }} </p>
-                                </div>
-                                <div class="col-2">
-                                    <figure>
-                                        <a class="btn btn-secondary btn" href=" {% url 'del' data.city %} "><i class="fa-solid fa-trash"></i></a>
-                                    </figure>
-                                </div>
-                                <div class="col-12 w-flex">
-                                    <div class="w-img">
-                                        <img src="http://openweathermap.org/img/w/{{ data.icon }}.png" alt="Image" class="img-fluid">
-                                    </div>
-                                    <div>
-                                        <h1>
-                                            {{ data.temperture }}
-                                        </h1>
-                                    </div>
-                                    <div>
-                                        <h3>
-                                            {{ data.cloudsDescription }}
-                                        </h3>
-                                        <p>
-                                            Feels Like {{ data.feelsLike }}
-                                        </p>
-                                    </div>
-                                </div>
-                                <div class="col-3">
-                                    <p> Wind </p>
-                                    <h5> {{ data.wind }} </h5>
-                                </div>
-                                <div class="col-3">
-                                    <p> Humdity </p>
-                                    <h5>{{ data.humdity }}%</h5>
-                                </div>
-                                <div class="col-3">
-                                    <p> Visbility </p>
-                                    <h5> {{ data.visibility }} </h5>
-                                </div>
-                                <div class="col-3">
-                                    <p> pressure </p>
-                                    <h5>{{ data.pressure }} mb</h5>
-                                </div>
-        
+
+            {% else %}
+            {% for data in data2 %}
+
+            <div class="row">
+                <div class="col-12 col-md-8 offset-md-2">
+                    <div class="row bg-primary  w-card" style="color: #fff;">
+                        <div class="col-9 col-sm-10">
+                            <h3> {{ data.city }} </h3>
+                            <p> {{ data.countryCode }} </p>
+                        </div>
+                        <div class="col-3 col-sm-2">
+                            <figure>
+                                <a class="btn btn-secondary" href=" {% url 'del' data.city %} "><i class="fa-solid fa-trash"></i></a>
+                            </figure>
+                        </div>
+                        <div class="col-12 w-flex">
+                            <div class="w-img">
+                                <img src="http://openweathermap.org/img/w/{{ data.icon }}.png" alt="Image" class="img-fluid">
+                            </div>
+                            <div>
+                                <h1>
+                                    {{ data.temperture }}
+                                </h1>
+                            </div>
+                            <div>
+                                <h3 class="text-capitalize">
+                                    {{ data.cloudsDescription }}
+                                </h3>
+                                <p>
+                                    Feels Like {{ data.feelsLike }}
+                                </p>
                             </div>
                         </div>
+                        <div class="col-3">
+                            <p> Wind </p>
+                            <h5> {{ data.wind }} </h5>
+                        </div>
+                        <div class="col-3">
+                            <p> Humdity </p>
+                            <h5>{{ data.humdity }}</h5>
+                        </div>
+                        <div class="col-3">
+                            <p> Visbility </p>
+                            <h5> {{ data.visibility }} </h5>
+                        </div>
+                        <div class="col-3">
+                            <p> pressure </p>
+                            <h5>{{ data.pressure }} </h5>
+                        </div>
+
                     </div>
-                    <br>
-                {% endfor %}
+                </div>
+            </div>
+            <br>
+        {% endfor %}
+               
+            {% endif %}
         </div>
 
 
@@ -224,9 +212,9 @@
                 <em>
                     &copy; 2022
                 </em>
-                <small>
+                <span>
                     Deyo CEO  dtech coders
-                </small>
+                </span>
                     
             </div>
         </footer>
